--- a/package.json
+++ b/package.json
@@ -18,21 +18,29 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/svelte": "^6.1.21",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-svelte-csf": "^1.0.0",
+    "@storybook/svelte": "^6.2.9",
     "babel-loader": "^8.2.2",
     "rollup": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
-    "svelte": "^3.35.0",
-    "svelte-loader": "^3.0.0"
+    "svelte": "^3.38.2",
+    "svelte-loader": "^3.1.1"
   },
   "keywords": [
-    "svelte", "form", "validation", "reactive", "input"
+    "svelte",
+    "form",
+    "validation",
+    "reactive",
+    "input"
   ],
   "files": [
     "src",
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "lodash-es": "^4.17.21"
+  }
 }
